<?xml version="1.0"?>
<package format="3">
  <name>ws23_kelo_wheel_analysis</name>
  <version>0.1.0</version>
  <description>Description of your package</description>
  <maintainer email="saif.anwar@smail.inf.h-brs.de">Saif Taifur Anwar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
